# LiongPlus

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LiongPlus.7z  TODO.md  src.cpp
Demo/: CMakeLists.txt  Cualific.hpp  MMDFragmentShader.glsl  MMDVertexShader.glsl  MikuMikuDance.cpp  MikuMikuDance.hpp  Pmx.cpp  Pmx.hpp  TextureReader.hpp  pmxSrc.cpp  src.cpp
Include/: AnsiCharUtils.cpp  AnsiCharUtils.hpp  Array.hpp  Buffer.cpp  Buffer.hpp  BufferPool.cpp  BufferPool.hpp  Char.cpp  Char.hpp  Console.cpp  Console.hpp  DateTime.cpp  DateTime.hpp  Delegate.hpp  Exception.hpp  Fundamental.cpp  Fundamental.hpp  IDisposable.hpp  IObservable.hpp  IObserver.hpp  IProgress.hpp  IStandardizable.hpp  Image.cpp  Lazy.hpp  Nullable.hpp  Optional.hpp  Platform.hpp  Ptr.hpp  ReferenceCounter.hpp  SafeError.hpp  Slice.cpp  Slice.hpp  String.cpp  String.hpp  StringLiteral.hpp  Uri.cpp  Uri.hpp  YieldIterator.cpp  YieldIterator.hpp  _
Include/Collections/: ContinuousMemoryEnumerator.hpp  ICollection.hpp  IComparer.hpp  IEnumerable.hpp  IEnumerator.hpp  IList.hpp  LinkedList.hpp  List.hpp  Tuple.hpp
Include/FileFormat/: Bmp.cpp  FileUtils.cpp  _
Include/Graphics/: ClampColor.hpp  Matrix4x4.cpp  Matrix4x4.hpp  Texture.cpp  Texture.hpp  _
Include/IO/: IBuffer.hpp  MemoryStream.cpp  MemoryStream.hpp  Stream.hpp
LiongPlus/: CMakeLists.txt  LiongPlus.natvis
LiongPlus/cmake/: CMakeConfigs.cmake  CheckInternalDependency.cmake  FunctionDef.cmake
LiongPlus/include/LiongPlus/: AnsiCharUtils.hpp  Array.hpp  Buffer.hpp  BufferPool.hpp  DateTime.hpp  DelegateDef.hpp  Event.hpp  IObservable.hpp  IProgress.hpp  Interface.hpp  Lazy.hpp  Matrix4x4.hpp  MemoryReader.hpp  MemoryWriter.hpp  MetadataHost.hpp  Path.hpp  Runtime.hpp  SafeError.hpp  Uri.hpp  _
LiongPlus/include/LiongPlus/FileFormat/: Bmp.hpp  Fbx.hpp  FileUtils.hpp  Obj.hpp  Png.hpp  Targa.hpp
LiongPlus/include/LiongPlus/Graphics/: Skeleton.hpp  World.hpp  _
LiongPlus/include/LiongPlus/Graphics/OpenGL/: BufferObject.hpp  OpenGLError.hpp  Sampler.hpp  Shader.hpp  ShaderProgram.hpp  Texture.hpp  VertexArray.hpp
LiongPlus/include/LiongPlus/Graphics/UI/: Animation.hpp  Brush.hpp  Canvas.hpp  ContentControl.hpp  DependencyInjection.hpp  OpenGLBrush.hpp  OpenGLCanvas.hpp  Panel.hpp  UIActionHost.hpp  UICommonDefs.hpp  UIElement.hpp  UIEvents.hpp  UIFactory.hpp  UIUpdater.hpp  Window.hpp  _  _UIActionUpdater.hpp  _UIAnimationUpdater.hpp
LiongPlus/include/LiongPlus/Graphics/UI/Controls/: Doodle.hpp  FullFramerate.hpp  Grid.hpp  InputField.hpp  PictureFrame.hpp  TextBlock.hpp
LiongPlus/include/LiongPlus/Media/: Color.hpp  Font.hpp
LiongPlus/include/LiongPlus/Net/: Dns.hpp  Ping.hpp
LiongPlus/include/LiongPlus/Net/Http/: HttpLine.hpp  _
LiongPlus/include/LiongPlus/Platform/: MinOpenGL.hpp  MinWindows.hpp  _
LiongPlus/include/LiongPlus/Serialization/: Base64.hpp  ColorLiteral.hpp  Unicode.hpp  Xml.hpp  _
LiongPlus/include/LiongPlus/Testing/: Assume.hpp  Logger.hpp  UnitTest.hpp  _
LiongPlus/include/LiongPlus/Threading/: Dispatcher.hpp  Timer.hpp
LiongPlus/src/: CMakeLists.txt
LiongPlus/src/LiongPlus/: BufferPool.cpp  CMakeLists.txt  DateTime.cpp  Uri.cpp
LiongPlus/src/LiongPlus/FileFormat/: Bmp.cpp  CMakeLists.txt  FileUtils.cpp  Png.cpp  Targa.cpp
LiongPlus/src/LiongPlus/Graphics/: CMakeLists.txt
LiongPlus/src/LiongPlus/Graphics/OpenGL/: BufferObject.cpp  CMakeLists.txt  Sampler.cpp  Shader.cpp  ShaderProgram.cpp  Texture.cpp  VertexArray.cpp
LiongPlus/src/LiongPlus/Graphics/UI/: Animation.cpp  CMakeLists.txt  Canvas.cpp  ContentControl.cpp  Control.cpp  DependencyInjection.cpp  OpenGLBrush.cpp  OpenGLBrushFragmentShader.glsl  OpenGLBrushVertexShader.glsl  OpenGLCanvas.cpp  Panel.cpp  UICommonDefs.cpp  UIElement.cpp  UIUpdater.cpp  Window.cpp
LiongPlus/src/LiongPlus/Graphics/UI/Controls/: Button.cpp  CMakeLists.txt  Doodle.cpp  FullFramerate.cpp  Grid.cpp  TextBlock.cpp
LiongPlus/src/LiongPlus/Media/: CMakeLists.txt  Color.cpp  Font.cpp
LiongPlus/src/LiongPlus/Net/: CMakeLists.txt  Socket.cpp  SocketAddress.cpp
LiongPlus/src/LiongPlus/Net/Http/: CMakeLists.txt  HttpClient.cpp  HttpHeader.cpp  HttpLine.cpp  HttpMessage.cpp
LiongPlus/src/LiongPlus/Platform/: CMakeLists.txt  MinOpenGL.cpp
LiongPlus/src/LiongPlus/Serialization/: Base64.cpp  CMakeLists.txt  ColorLiteral.cpp  Xml.cpp
LiongPlus/src/LiongPlus/Testing/: Assert.cpp  CMakeLists.txt  Logger.cpp  UnitTest.cpp
LiongPlus/src/LiongPlus/Threading/: CMakeLists.txt  Dispatcher.cpp
(+115 files in other folders)
